@@ -1,10 +1,11 @@
 DarkRP 2.4.2 SVN
+[ADD] Laws system! Use /placelaws to spawn a screen displaying the laws, /addlaw and /removelaw to edit them. rp_maxlawboards to set the limit.
 [ADD] AFK NPC
 [ADD] Signing of letters
 [ADD] Proplympics! Prop surf games :D
 [CHANGE] People need to be alive in order to be able to wanted/warrant
 [CHANGE] Updated Notifies to work better with the newer ones
-[CHANGE] Optimized setname
+[CHANGE] Lots of function/network optimisation
 [CHANGE] Remade HUD
 
 DarkRP 2.4.2
